cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificIntUserDefFuncStatsCheckWhile.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -------------------------------------------------------------
  (1/1) Internal user-defined function has a 'while' statement.
  -------------------------------------------------------------
   * In user-defined function "f":
     - while true:
       ^
   * In user-defined function "g.f":
     - while true:
       ^
